--- a/index.html
+++ b/index.html
@@ -3,34 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Hosting</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f4f4f4;
-        }
-        video {
-            max-width: 90%;
-            border: 2px solid #333;
-            border-radius: 10px;
-        }
-        h1 {
-            margin-bottom: 20px;
-        }
-    </style>
+    <title>IRUKURATHELLAM AKKA</title>
+    <link rel="icon" type="image/x-icon" href="./iconn.png">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>My Video</h1>
-    <video controls>
-        <source src="myvideo.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <div class="hero">
+        <h1>Welcome</h1>
+        <p>Experience our exclusive video content in a sleek and modern interface.</p>
+        <div class="menu">
+            <a href="teaser.html">🎬 Teaser</a>
+            <a href="main.html">🎥 Main Video</a>
+            <a href="sneakpeaks.html">👀 Sneak Peaks</a>
+        </div>
+    </div>
 </body>
 </html>
-
